--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.6.0",
-    "mongoose": "^5.9.4"
+    "mongoose": "^5.9.4",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
