--- a/now.json
+++ b/now.json
@@ -3,5 +3,16 @@
     "builds": [{
         "src": "app.js",
         "use": "@now/node-server"
-    }]
+    }],
+    "routes": [{
+            "src": "/graphql",
+            "dest": "/app.js",
+            "methods": ["GET"]
+        },
+        {
+            "src": "/graphql",
+            "dest": "/app.js",
+            "methods": ["POST"]
+        }
+    ]
 }
